# my_chat_client

./: CMakeLists.txt  Chat.sql  Readme  resources.qrc
src/: chat_dialog.cpp  chat_dialog.h  chat_dialog.ui  chat_history_list.cpp  chat_history_list.h  chat_history_widget.cpp  chat_history_widget.h  chat_history_widget.ui  chat_page.cpp  chat_page.h  chat_page.ui  chat_view.cpp  chat_view.h  clicked_btn.cpp  clicked_btn.h  clicked_label.cpp  clicked_label.h  customize_edit.cpp  customize_edit.h  global.cpp  global.h  http_manager.cpp  http_manager.h  list_item_base.cpp  list_item_base.h  loading_dialog.cpp  loading_dialog.h  loading_dialog.ui  login_dialog.cpp  login_dialog.h  login_dialog.ui  main.cpp  main_window.cpp  main_window.h  main_window.ui  register_dialog.cpp  register_dialog.h  register_dialog.ui  reset_dialog.cpp  reset_dialog.h  (+8 more)
style/: stylesheet.qss
